    config.use_transactional_fixtures = true
    config.use_instantiated_fixtures  = false
    config.fixture_path = RAILS_ROOT + '/spec/fixtures'
  end

You can now use mocha with RSpec if you prefer it to RSpec's own mock framework. Just
put this in a file that is loaded before your specs:

  Spec::Runner.configure do |config|
    config.mock_with :mocha
  end

* Sugar FREE!
* Applied [#9852] Patch for RSpec's Website using Webgen 0.4.2
* Fixed [#6523] Run rspec on rails without a db
* Fixed [#9295] rake spec should run anything in the spec directory (not just rspec's standard dirs)
* Added [#9786] infer controller and helper names from the described type
* Fixed [#7795] form_tag renders action='/view_spec' in view specs
* Fixed [#9767] rspec_on_rails should not define rescue_action on controllers
* Fixed [#9421] --line doesn't work with behaviours that use class names
* Fixed [#9760] rspec generators incompatible with changes to edge rails
* Added [#9786] infer controller and helper names from the described type
* Applied a simplified version of [#9282] Change to allow running specs from textmate with rspec installed as a rails plugin (and no rspec gem installed)
* Applied [#9700] Make Spec::DSL::Example#name public / Add a --timeout switch. A great way to prevent specs from getting slow.
* In Rails, script/generate rspec will generate a spec.opts file that optimises faster/more efficient running of specs.
* Added [#9522] support using rspec's expectations with test/unit
* Moved rspec_on_rails up to the project root, simplifying the download url
* Fixed [#8103] RSpec not installing spec script correctly.
* The --spec option is replaced by the --example option.
* The --loadby option no longer supports a file argument. Use --example file_name instead.
* The --example option can now take a file name as an argument. The file should contain example names.
* New --failures option which will write out a file that can later be used with --example.